@@ -1,4 +1,6 @@
 <?php
+$KMPERMILE = 1.609344;
+
 $modes = array ("F" => "Flight", "T" => "Train", "S" => "Ship", "R" => "Road trip");
 $modeOperators = array ("F" => "airline", "T" => "railway", "S" => "shipping company", "R" => "road transport company");
 
